--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-gifted-charts": "^1.3.23",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-svg": "^14.0.0",
     "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
