--- a/package.json
+++ b/package.json
@@ -7,16 +7,26 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean:pods": "cd ios && rm -rf pods && pod install",
+    "clean:ios": "npm run clean:pods && cd ios && rm -rf build",
+    "clean:modules": "rm -rf node_modules && yarn",
+    "install:pods": "cd ios && pod install"
   },
   "dependencies": {
+    "@aws-amplify/react-native": "^1.0.5",
+    "@aws-amplify/ui-react-native": "^2.0.3",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/netinfo": "^11.1.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "aws-amplify": "^6.0.5",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-gifted-charts": "^1.3.23",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
@@ -26,6 +36,7 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^14.0.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
