--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "aws-amplify": "^6.0.5",
+    "dayjs": "^1.11.10",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-collapsible": "^1.6.1",
