--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-amplify/react-native": "^1.0.5",
     "@aws-amplify/ui-react-native": "^2.0.3",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/netinfo": "^11.1.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
