--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CabExpense",
-  "version": "0.0.1",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -11,7 +11,8 @@
     "clean:pods": "cd ios && rm -rf pods && pod install",
     "clean:ios": "npm run clean:pods && cd ios && rm -rf build",
     "clean:modules": "rm -rf node_modules && yarn",
-    "install:pods": "cd ios && pod install"
+    "install:pods": "cd ios && pod install",
+    "bump-manual": "bundle exec fastlane bump"
   },
   "dependencies": {
     "@aws-amplify/react-native": "^1.0.5",
