--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.3.0",
   "private": true,
   "scripts": {
+    "detox:ios:build": "detox build --configuration ios.sim.debug",
+    "detox:ios:run": "detox test --configuration ios.sim.debug",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -49,12 +51,15 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.5",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "babel-jest": "^29.2.1",
+    "detox": "^20.17.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
@@ -67,6 +72,7 @@
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.2",
     "typescript": "4.8.4"
   },
   "engines": {
