--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CabExpense",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "private": true,
   "scripts": {
     "detox:ios:build": "detox build --configuration ios.sim.debug",
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-collapsible": "^1.6.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-get-random-values": "^1.10.0",
     "react-native-gifted-charts": "^1.3.23",
@@ -42,7 +43,8 @@
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^14.0.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
