--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-svg": "^14.0.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.2",
+    "sp-react-native-in-app-updates": "^1.4.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -73,6 +74,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
+    "react-native-device-info": "^10.12.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.2",
     "typescript": "4.8.4"
